# orca-toolbox

./: .gitignore  README.md
.github/workflows/: unit_tests.yaml
.orca/backstage/: catalog-component-locations.yaml  catalog-info-repo.yaml  repository-info.yaml
Azure-Managed-Identity-Explorer/: README.md  setup.py
Azure-Managed-Identity-Explorer/src/Managed-Identity-Explorer/: config.json  main.py
CrowdStrike-remediate/: LICENSE  README.md  main.py  pyproject.toml
GCP-Lateral-Movement-Detector/: README.md  gcp-lateral-movement-detector.sh
GCP-Storage-Explorer/: README.md  gcp-storage-explorer.sh
iam-ape/: README.md  pyproject.toml
iam-ape/iam_ape/: consts.py  evaluator.py  exceptions.py  expand_policy.py  helper_classes.py  helper_functions.py  helper_types.py  main.py
iam-ape/iam_ape/aws_iam_actions/: exceptions.py  scrape_iam_actions.py
iam-ape/tests/: test_data.json  test_deny.py  test_e2e.py  test_permissions_boundary.py
iam-ape/tests/test_data/: test_account_authorizations_details.json  test_scp_policy_1.json
oci_enum/: README.md  pyproject.toml  setup.cfg  setup.py
oci_enum/oci_enum/: __init__.py  command_line.py  instance_metdata_config.py  oci_enumerator.py
sys-all-check/: LICENSE  README.md  check.py  clusters.txt  requirements.txt
