[tool.poetry]
name = "orca-cs-remediate"
version = "1.0.0"
description = ""
authors = ["Tohar Braun, Orca Security <tohar@orca.security>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.145"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
