[metadata]
name = oci-enum
version = attr: oci_enum.__version__
description = CLI Tool by Orca Security to enumerate services in Oracle Cloud Infrastructure
long_description = file: README.md
long_description_content_type = text/markdown
author = Lidor Ben Shitrit and Tohar Braun @ Orca Security Ltd.
